Tests production ready

--- a/examples/training-demo-analyst-simple.ipynb
+++ b/examples/training-demo-analyst-simple.ipynb
@@ -29,7 +29,7 @@
     "import example\n",
     "\n",
     "analyst_username = os.getenv('ANALYST_ID')\n",
-    "analyst_***REMOVED*** = os.getenv('ANALYST_PASSWORD')\n",
+    "analyst_password = os.getenv('ANALYST_PASSWORD')\n",
     "\n",
     "# The analyst needs these to control who can upload data\n",
     "data_owner_usernames = (os.getenv('DATAOWNER1_ID'), os.getenv('DATAOWNER2_ID'))\n",
@@ -66,7 +66,7 @@
    "source": [
     "analyst_instance = example.analyst_set_up_instance(\n",
     "    analyst_username, \n",
-    "    analyst_***REMOVED***, \n",
+    "    analyst_password, \n",
     "    data_owner_usernames, \n",
     "    feature_columns, \n",
     "    label_column\n",
@@ -100,7 +100,7 @@
     "    \"l1_penalty\": 0.0,\n",
     "}\n",
     "\n",
-    "analyst_instance.start_execution(analyst_***REMOVED***, hyperparameters)"
+    "analyst_instance.start_execution(analyst_password, hyperparameters)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier, metadata = analyst_instance.get_results(analyst_***REMOVED***)\n",
+    "classifier, metadata = analyst_instance.get_results(analyst_password)\n",
     "print(\"metadata: {}\".format(json.dumps(metadata, indent=2)))"
    ]
   },
@@ -134,7 +134,7 @@
     "    \"l1_penalty\": 0.0,\n",
     "}\n",
     "\n",
-    "analyst_instance.start_execution(analyst_***REMOVED***, hyperparameters)"
+    "analyst_instance.start_execution(analyst_password, hyperparameters)"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier, metadata = analyst_instance.get_results(analyst_***REMOVED***)\n",
+    "classifier, metadata = analyst_instance.get_results(analyst_password)\n",
     "print(\"metadata: {}\".format(json.dumps(metadata, indent=2)))"
    ]
   },
