--- a/examples/training-demo-data-owner-1-simple.ipynb
+++ b/examples/training-demo-data-owner-1-simple.ipynb
@@ -26,7 +26,7 @@
     "import example\n",
     "\n",
     "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
-    "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
+    "dataowner1_password = os.getenv('DATAOWNER1_PASSWORD')\n",
     "dataowner1_file = \"test-data/wine-dataowner1.csv\""
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "example.data_owner_submit_data(\n",
     "    dataowner1_username, \n",
-    "    dataowner1_***REMOVED***, \n",
+    "    dataowner1_password, \n",
     "    instance_id_from_analyst, \n",
     "    dataowner1_file\n",
     ")"
