--- a/examples/training-demo-data-owner-1.ipynb
+++ b/examples/training-demo-data-owner-1.ipynb
@@ -30,7 +30,7 @@
     "import example\n",
     "\n",
     "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
-    "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
+    "dataowner1_password = os.getenv('DATAOWNER1_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
     "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
@@ -83,7 +83,7 @@
     "# Create client\n",
     "dataowner1_client = Client(\n",
     "    username=dataowner1_username,\n",
-    "    ***REMOVED***=dataowner1_***REMOVED***,\n",
+    "    password=dataowner1_password,\n",
     "    instance_types=[Training_Instance],\n",
     "    backend_host=backend_host,\n",
     "    backend_port=backend_port\n",
