--- a/examples/training-demo-data-owner-2-simple.ipynb
+++ b/examples/training-demo-data-owner-2-simple.ipynb
@@ -26,7 +26,7 @@
     "import example\n",
     "\n",
     "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
-    "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
+    "dataowner2_password = os.getenv('DATAOWNER2_PASSWORD')\n",
     "dataowner2_file = \"test-data/wine-dataowner2.csv\""
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "example.data_owner_submit_data(\n",
     "    dataowner2_username, \n",
-    "    dataowner2_***REMOVED***, \n",
+    "    dataowner2_password, \n",
     "    instance_id_from_analyst, \n",
     "    dataowner2_file\n",
     ")"
