--- a/examples/training-demo-data-owner-2.ipynb
+++ b/examples/training-demo-data-owner-2.ipynb
@@ -30,7 +30,7 @@
     "import example\n",
     "\n",
     "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
-    "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
+    "dataowner2_password = os.getenv('DATAOWNER2_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
     "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
@@ -83,7 +83,7 @@
     "# Create client\n",
     "dataowner2_client = Client(\n",
     "    username=dataowner2_username,\n",
-    "    ***REMOVED***=dataowner2_***REMOVED***,\n",
+    "    password=dataowner2_password,\n",
     "    instance_types=[Training_Instance],\n",
     "    backend_host=backend_host,\n",
     "    backend_port=backend_port\n",
