--- a/examples/training-demo-analyst.ipynb
+++ b/examples/training-demo-analyst.ipynb
@@ -34,7 +34,7 @@
     "import example\n",
     "\n",
     "analyst_username = os.getenv('ANALYST_ID')\n",
-    "analyst_***REMOVED*** = os.getenv('ANALYST_PASSWORD')\n",
+    "analyst_password = os.getenv('ANALYST_PASSWORD')\n",
     "\n",
     "# The analyst needs these to control who can upload data\n",
     "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
@@ -71,7 +71,7 @@
     "# Create client.\n",
     "analyst_client = Client(\n",
     "    username=analyst_username,\n",
-    "    ***REMOVED***=analyst_***REMOVED***,\n",
+    "    password=analyst_password,\n",
     "    instance_types=[Training_Instance],\n",
     "    backend_host=backend_host,\n",
     "    backend_port=backend_port\n",
@@ -136,7 +136,7 @@
     "configuration = Configuration(\n",
     "    feature_columns=feature_columns,\n",
     "    label_column=label_column,\n",
-    "    ***REMOVED***=analyst_***REMOVED*** # the ***REMOVED*** to execute\n",
+    "    password=analyst_password # the password to execute\n",
     ")\n",
     "\n",
     "# Create and set public-private keypair for secure communication.\n",
@@ -175,9 +175,9 @@
     "    \"l1_penalty\": 0.0,\n",
     "}\n",
     "\n",
-    "analyst_instance.start_execution(analyst_***REMOVED***, hyperparameters)\n",
+    "analyst_instance.start_execution(analyst_password, hyperparameters)\n",
     "\n",
-    "classifier, metadata = analyst_instance.get_results(analyst_***REMOVED***)\n",
+    "classifier, metadata = analyst_instance.get_results(analyst_password)\n",
     "print(\"metadata: {}\".format(json.dumps(metadata, indent=2)))"
    ]
   },
@@ -202,9 +202,9 @@
     "    \"l1_penalty\": 0.0,\n",
     "}\n",
     "\n",
-    "analyst_instance.start_execution(analyst_***REMOVED***, hyperparameters)\n",
+    "analyst_instance.start_execution(analyst_password, hyperparameters)\n",
     "\n",
-    "classifier, metadata = analyst_instance.get_results(analyst_***REMOVED***)\n",
+    "classifier, metadata = analyst_instance.get_results(analyst_password)\n",
     "print(\"metadata: {}\".format(json.dumps(metadata, indent=2)))"
    ]
   },
