--- a/examples/training-demo-analyst-simple.ipynb
+++ b/examples/training-demo-analyst-simple.ipynb
@@ -29,7 +29,8 @@
     "import example\n",
     "\n",
     "analyst_username = os.getenv('ANALYST_ID')\n",
-    "analyst_password = os.getenv('ANALYST_PASSWORD')\n",
+    "analyst_api_token = os.getenv('ANALYST_API_TOKEN')\n",
+    "analyst_password = \"EXAMPLE\"\n",
     "\n",
     "# The analyst needs these to control who can upload data\n",
     "data_owner_usernames = (os.getenv('DATAOWNER1_ID'), os.getenv('DATAOWNER2_ID'))\n",
@@ -65,9 +66,9 @@
    "outputs": [],
    "source": [
     "analyst_instance = example.analyst_set_up_instance(\n",
-    "    analyst_username, \n",
+    "    analyst_api_token, \n",
     "    analyst_password, \n",
-    "    data_owner_usernames, \n",
+    "    data_owner_usernames,\n",
     "    feature_columns, \n",
     "    label_column\n",
     ")"
@@ -191,6 +192,13 @@
     "analyst_instance.shutdown()\n",
     "analyst_instance.delete()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
