--- a/examples/training-demo-all-in-one.ipynb
+++ b/examples/training-demo-all-in-one.ipynb
@@ -33,16 +33,17 @@
     "import numpy as np\n",
     "\n",
     "analyst_username = os.getenv('ANALYST_ID')\n",
-    "analyst_password = os.getenv('ANALYST_PASSWORD')\n",
+    "analyst_api_token = os.getenv('ANALYST_API_TOKEN')\n",
+    "analyst_password = \"EXAMPLE\"\n",
     "\n",
     "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
-    "dataowner1_password = os.getenv('DATAOWNER1_PASSWORD')\n",
+    "dataowner1_api_token = os.getenv('DATAOWNER1_API_TOKEN')\n",
     "\n",
     "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
-    "dataowner2_password = os.getenv('DATAOWNER2_PASSWORD')\n",
+    "dataowner2_api_token = os.getenv('DATAOWNER2_API_TOKEN')\n",
     "\n",
     "# This is the hash of the code\n",
-    "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
+    "expected_measurement = \"71b81c5d4a1879fd75905bd207b079274fdcd095f2ff145d0b560574f5733df3\"\n",
     "\n",
     "# How the analyst expects the data to be formatted\n",
     "feature_columns = ['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n",
@@ -52,7 +53,7 @@
     "dataowner1_file = \"test-data/wine-dataowner1.csv\"\n",
     "dataowner2_file = \"test-data/wine-dataowner2.csv\"\n",
     "\n",
-    "backend_host = \"avato.uksouth.cloudapp.azure.com\" \n",
+    "backend_host = \"api.decentriq.ch\" \n",
     "backend_port = 15005 "
    ]
   },
@@ -72,11 +73,11 @@
    "source": [
     "# Create client.\n",
     "analyst_client = Client(\n",
-    "    username=analyst_username,\n",
-    "    password=analyst_password,\n",
+    "    api_token=analyst_api_token,\n",
     "    instance_types=[Training_Instance],\n",
     "    backend_host=backend_host,\n",
-    "    backend_port=backend_port\n",
+    "    backend_port=backend_port,\n",
+    "    use_ssl=True\n",
     ")\n",
     "\n",
     "# Spin up an instance. Set who can participate in the instance.\n",
@@ -181,15 +182,15 @@
    "outputs": [],
    "source": [
     "# This function submits for a given dataowner a data file to the instance.\n",
-    "def dataowner_submit_data(dataowner_username, dataowner_password, instance_id, data_file):\n",
+    "def dataowner_submit_data(dataowner_username, dataowner_api_token, instance_id, data_file):\n",
     "\n",
     "    # Create client\n",
     "    dataowner_client = Client(\n",
-    "        username=dataowner_username,\n",
-    "        password=dataowner_password,\n",
+    "        api_token=dataowner_api_token,\n",
     "        instance_types=[Training_Instance],\n",
     "        backend_host=backend_host,\n",
-    "        backend_port=backend_port\n",
+    "        backend_port=backend_port,\n",
+    "        use_ssl=True\n",
     "    )\n",
     "\n",
     "    # Connect to instance (using ID from the analyst user)\n",
@@ -238,7 +239,7 @@
    "source": [
     "dataowner1_instance = dataowner_submit_data(\n",
     "    dataowner1_username, \n",
-    "    dataowner1_password, \n",
+    "    dataowner1_api_token, \n",
     "    analyst_instance.id, \n",
     "    data_file=dataowner1_file\n",
     ")"
@@ -259,7 +260,7 @@
    "source": [
     "dataowner2_instance = dataowner_submit_data(\n",
     "    dataowner2_username, \n",
-    "    dataowner2_password, \n",
+    "    dataowner2_api_token, \n",
     "    analyst_instance.id, \n",
     "    dataowner2_file\n",
     ")"
@@ -392,6 +393,13 @@
     "analyst_instance.delete()\n",
     "assert analyst_instance.id not in analyst_client.get_instances()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
