--- a/examples/training-demo-data-owner-2-simple.ipynb
+++ b/examples/training-demo-data-owner-2-simple.ipynb
@@ -25,8 +25,7 @@
     "import os\n",
     "import example\n",
     "\n",
-    "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
-    "dataowner2_password = os.getenv('DATAOWNER2_PASSWORD')\n",
+    "dataowner2_api_token = os.getenv('DATAOWNER2_API_TOKEN')\n",
     "dataowner2_file = \"test-data/wine-dataowner2.csv\""
    ]
   },
@@ -43,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"a9a0f4506629c507f3890e9ea4ad38c322211b99d00cdcab6ea9c4e9fc0c451e\""
+    "instance_id_from_analyst = \"46de08acb531c1df9d7c378921b2de77179a54dedd128641d8335ed50d400e32\""
    ]
   },
   {
@@ -60,12 +59,18 @@
    "outputs": [],
    "source": [
     "example.data_owner_submit_data(\n",
-    "    dataowner2_username, \n",
-    "    dataowner2_password, \n",
+    "    dataowner2_api_token, \n",
     "    instance_id_from_analyst, \n",
     "    dataowner2_file\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
